# zip_static_handler

./: Cargo.toml  README.md
examples/: actix.rs  async.rs  auto_update.rs  axum.rs  hyper.rs  min_http11.rs  rocket.rs  salvo.rs  xitca.rs
src/: actix.rs  axum.rs  builder.rs  compression.rs  errors.rs  github.rs  handler.rs  headers.rs  http.rs  hyper.rs  lib.rs  min_http11.rs  path.rs  rocket.rs  salvo.rs  types.rs  xitca.rs
test-tracing/: Cargo.toml
test-tracing/src/: lib.rs
