[package]
name = "zip_static_handler"
version = "0.6.0"
edition = "2021"
rust-version = "1.75"
authors = ["Jerome David <programingjd@gmail.com>"]
categories = ["web-programming::http-server"]
description = "Static file handler from zip archive"
keywords = ["static", "handler", "zip"]
license = "MIT"
repository = "https://github.com/programingjd/zip_static_handler"
include = [
    "Cargo.toml", "src", "examples", "LICENSE", "README.md"
]

[dependencies.zip_structs]
version = "0.2"
default-features = false
features = []

[dependencies.inflate]
version = "0.4"
default-features = false
features = []

[dependencies.brotli]
version = "4.0"
default-features = false
features = ["std"]

[dependencies.lazy_static]
version = "1.4"
default-features = false
features = []

[dependencies.tracing]
version = "0.1"
default-features = false
features = ["std", "attributes"]

[dependencies.hyper]
optional = true
version = "1.2"
default-features = false
features = []

[dependencies.http-body-util]
optional = true
version = "0.1"
default-features = false
features = []

[dependencies.http]
optional = true
version = "1.1"
default-features = false
features = ["std"]

[dependencies.axum-core]
optional = true
version = "0.4"
default-features = false
features = []

[dependencies.actix-web]
optional = true
version = "4.5"
default-features = false
features = []

[dependencies.rocket]
optional = true
version = "0.5"
default-features = false
features = []

[dependencies.xitca-web]
optional = true
version = "0.4"
default-features = false
features = ["http1", "http-body"]

[dependencies.tokio]
optional = true
version = "1.37"
default-features = false
features = ["io-util"]

[dependencies.min_http11_parser]
optional = true
version = "0.2"
default-features = false
features = ["_minimal"]

[features]
#default = []
default = ["hyper", "axum", "actix", "rocket", "xitca", "min_http11"]
hyper = ["dep:hyper", "dep:http-body-util"]
axum = ["dep:axum-core", "dep:http"]
actix = ["dep:actix-web"]
rocket = ["dep:rocket"]
xitca = ["dep:xitca-web"]
min_http11 = ["min_http11_parser/_minimal", "dep:tokio"]

#http client for downloading zip from github
[dev-dependencies.reqwest]
version = "0.12"
features = ["blocking", "rustls-tls"]

[dev-dependencies.tokio]
version = "1.37"
default-features = false
features = ["full"]

# for the hyper example
[dev-dependencies.hyper-util]
version = "0.1"
default-features = false
features = ["tokio", "server", "http1"]

# for the axum example
[dev-dependencies.axum]
version = "0.7"
default-features = false
features = ["tokio", "http1", "tracing"]

# for the actix example

[dev-dependencies.actix-web]
version = "4.5"
default-features = false
features = ["macros"]

[dev-dependencies.rocket]
version = "0.5"
default-features = false
features = []

# for the tests
[dev-dependencies.tracing-subscriber]
version = "0.3"
default-features = true
features = ["env-filter"]

[dev-dependencies.test-tracing]
path = "test-tracing"

[workspace]
members = ["test-tracing"]

[[example]]
name = "hyper"
required-features = ["hyper"]

[[example]]
name = "axum"
required-features = ["axum"]

[[example]]
name = "actix"
required-features = ["actix"]

[[example]]
name = "rocket"
required-features = ["rocket"]

[[example]]
name = "xitca"
required-features = ["xitca"]

[[example]]
name = "auto_update"
required-features = ["axum"]

[[example]]
name = "min_http11"
required-features = ["min_http11"]
