[package]
name = "test-tracing"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1.0"
default-features = false
features = []

[dependencies.quote]
version = "1.0"
default-features = false
features = []

[dependencies.syn]
version = "2.0"
default-features = false
features = ["proc-macro"]

